more updates and testing on dsl jobs

--- a/dsl/steps.j2
+++ b/dsl/steps.j2
@@ -18,6 +18,11 @@ job('job_dsl_example') {
     }
 
     steps {
-        shell("echo 'Hello World'")
+        shell("""echo 'Hello World'   
+                 echo 'Running script' 
+                 /tmp/script.sh  
+             """ 
+       )
+
     }
 }
