--- a/dsl/ansible.j2
+++ b/dsl/ansible.j2
@@ -1,42 +1,24 @@
 
-job('job_dsl_example') {
+job('ansible-users-db-dsl') {
 
-    description('This is my awesome Job')
+    description('update the html table based on input')
 
   
     parameters {
-        stringParam('Planet', defaultValue = 'world', description = 'This is the world')
-	booleanParam('FLAG', true)
-        choiceParam('OPTION', ['option 1 (default)', 'option 2', 'option 3'])
-    }
-
-    scm {
-        git('https://github.com/jenkins-docs/simple-java-maven-app', 'master')
-    }
-
-    triggers {
-        cron('H 5 * * 7')
+       choiceParam('AGE', ['21', '22', '23', '24', '25'])
     }
 
     steps {
-
         wrappers {
             colorizeOutput(colorMap = 'xterm')
       }
-        ansiblePlaybook('/etc/ansible/plays/i2b-cl/some_playbook.yml') {
-            inventoryPath('/etc/ansible/plays/i2b-cl/hosts')
-            tags('cool')
-            forks(1)
+        ansiblePlaybook('/var/jenkins_home/ansible/people.yml') {
+            inventoryPath('/var/jenkins_home/ansible/hosts')
             colorizedOutput(true)
-            additionalParameters('--vault-password-file $HOME/pass-vault/i2b-cl.txt')
             extraVars {
-                extraVar("whoami", '${param1}', false)
-                extraVar("my_pass", 'some_pass', true)
+                extraVar("PEOPLE_AGE", '${AGE}', false)
             }
         }
     }
 
-    publishers {
-        mailer('me@example.com', true, true)
-    }
 }
