--- a/dsl/maven.j2
+++ b/dsl/maven.j2
@@ -8,11 +8,11 @@ job('maven_dsl') {
   
     steps {
         maven {
-            mavenInstallation('mvn-jenkins')
+            mavenInstallation('jenkins-maven')
             goals('-B -DskipTests clean package')
         }
         maven {
-            mavenInstallation('mvn-jenkins')
+            mavenInstallation('jenkins-maven')
             goals('test')
         }
         shell('''
@@ -24,6 +24,6 @@ job('maven_dsl') {
     publishers {
         archiveArtifacts('target/*.jar')
         archiveJunit('target/surefire-reports/*.xml')
-        mailer('ricardo.andre.gonzalez07@gmail.com', true, true)
+        mailer('alkhatibsaed007@gmail.com', true, true)
     }
 }
